CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )

PROJECT( VostanEditor VERSION 1.0 )

SET( CMAKE_CXX_STANDARD 11 )

#SET( TARGET_LIBS ${TARGET_LIBS} cmd )

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_SOURCE_DIR}/third_party/cli/include/
    )

#FILE(GLOB CMD_SOURCES
#	"${PROJECT_SOURCE_DIR}/src/cmd/*.cxx"
#	)

# ADD_LIBRARY( cmd SHARED ${CMD_SOURCES} )
ADD_EXECUTABLE( VostanEditor "${PROJECT_SOURCE_DIR}/src/main.cxx" )

#TARGET_LINK_LIBRARIES( VostanEditor ${TARGET_LIBS} )
